exports[`test sets up a Kid 1`] = `
Array [
  Object {
    "UUID": "non-random-uuid",
    "setupID": 1234,
    "type": "ADD_KID",
  },
]
`;

exports[`test sets up a Kid 2`] = `
Array [
  "https://traxiapp.firebaseio.com/setupIDs/1234",
]
`;

exports[`test sets up a Kid 3`] = `
Array [
  "https://traxiapp.firebaseio.com/kids/non-random-uuid",
]
`;

exports[`test sets up a Kid 4`] = `
Array [
  "non-random-uuid",
  [Function],
]
`;

exports[`test sets up a Kid 5`] = `
Array [
  Object {
    "UUID": "non-random-uuid",
    "deviceType": "unknown",
    "name": "Test Name",
    "phoneNumber": "+61401633346",
    "setupID": 1234,
    "status": "WAITING",
  },
  [Function],
]
`;
